--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
 		"aws/aws-sdk-php" : "3.275.1"
 	},
 	"require-dev" : {
-		"phpunit/phpunit" : "^9"
+		"phpunit/phpunit" : "9.6.11"
 	},
 	"autoload" : {
 		"psr-4" : {
@@ -47,7 +47,7 @@
 		"preferred-install": "dist",
 		"sort-packages": true,
 		"platform": {
-			"php": "7.3"
+			"php": "8.2"
 		}
 	}
 }
