--- a/.github/workflows/codeCoverage.yml
+++ b/.github/workflows/codeCoverage.yml
@@ -1,35 +1,28 @@
 name: Running Code Coverage
 
-on: [push, pull_request]
+
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [12.x, 13.x, 14.x, 15.x]
-
+    name: CI Build
     steps:
-    - name: Checkout repository
+    - name: Checkout
       uses: actions/checkout@v2
-      with:
-        fetch-depth: 2
 
-    - name: Set up Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
+    - name: Restore Dependencies
+      run: dotnet restore src/Example.sln
 
-    - name: Install dependencies
-      run: npm install
+    - name: Build
+      run: dotnet build src/Example.sln --configuration Release --no-restore
 
-    - name: Run tests
-      run: npm run test
-
-    - name: Code Coverage Summary
-      uses: irongut/CodeCoverageSummary@v1.3.0
+    - name: Test
+      run: dotnet test src/Example.sln --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./coverage
 
     - name: Code Coverage Report
       uses: irongut/CodeCoverageSummary@v1.3.0
