--- a/.github/workflows/codeCoverage.yml
+++ b/.github/workflows/codeCoverage.yml
@@ -15,12 +15,6 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Restore Dependencies
-      run: dotnet restore src/Example.sln
-
-    - name: Build
-      run: dotnet build src/Example.sln --configuration Release --no-restore
-
     - name: Test
       run: dotnet test src/Example.sln --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./coverage
 
@@ -42,4 +36,4 @@ jobs:
       if: github.event_name == 'pull_request'
       with:
         recreate: true
-        path: ./code-coverage-results.md
+        path: code-coverage-results.md
