--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -39,6 +39,11 @@ jobs:
     - name: Install Google Cloud Storage
       run: composer require google/cloud-storage
 
+    - name: Code Coverage Summary Report
+      uses: irongut/CodeCoverageSummary@v1.3.0
+      with:
+        filename: coverage.cobertura.xml
+
     # testing
     - name: Run unit tests
       run: ../vendor/bin/phpunit --no-coverage
