--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,3 +1,5 @@
+ 
+
 name: PHP Composer
 
 on:
@@ -11,12 +13,16 @@ permissions:
 
 jobs:
   build:
-
+    env:
+      XDEBUG_MODE: coverage
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
 
+
+
+    # composer cache
     - name: Remove composer lock
       run: rm composer.lock
 
@@ -32,20 +38,24 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
 
-          # composer installation
     - name: Setup PHPunit
       run: composer install -n
 
     - name: Install Google Cloud Storage
       run: composer require google/cloud-storage
 
-    # testing
     - name: Run unit tests
       run: ../vendor/bin/phpunit --no-coverage
       working-directory: tst
 
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
+    - name: Install Xdebug
+      run: sudo apt-get install -y php-xdebug
+    
+    - name: couverture sous format xml
+      run: ../vendor/bin/phpunit --coverage-cobertura=my-cobertura-coverage.xml
+      working-directory: tst
 
-    # - name: Run test suite
-    #   run: composer run-script test
+    - name: Code Coverage Summary Report
+      uses: irongut/CodeCoverageSummary@v1.3.0
+      with:
+          filename: ./tst/my-cobertura-coverage.xml
