--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -59,3 +59,18 @@ jobs:
       uses: irongut/CodeCoverageSummary@v1.3.0
       with:
           filename: ./tst/my-cobertura-coverage.xml
+          badge: true
+          fail_below_min: true
+          format: markdown
+          hide_branch_rate: false
+          hide_complexity: true
+          indicators: true
+          output: both
+          thresholds: '60 80'
+
+    - name: Add Coverage PR Comment
+      uses: marocchino/sticky-pull-request-comment@v2
+      if: github.event_name == 'pull_request'
+      with:
+        recreate: true
+        path: ./tst/my-cobertura-coverage.xml
