--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,4 +1,4 @@
-  
+ 
 
 name: PHP Composer
 
@@ -44,9 +44,9 @@ jobs:
     - name: Install Google Cloud Storage
       run: composer require google/cloud-storage
 
-    - name: Run unit tests
-      run: ../vendor/bin/phpunit --no-coverage
-      working-directory: tst
+#    - name: Run unit tests
+#      run: ../vendor/bin/phpunit --no-coverage
+#      working-directory: tst
 
     - name: Install Xdebug
       run: sudo apt-get install -y php-xdebug
@@ -59,18 +59,11 @@ jobs:
       uses: irongut/CodeCoverageSummary@v1.3.0
       with:
           filename: ./tst/my-cobertura-coverage.xml
-          badge: true
-          fail_below_min: true
           format: markdown
-          hide_branch_rate: false
-          hide_complexity: true
-          indicators: true
           output: both
-          thresholds: '60 80'
+          badge: true
 
-    - name: Add Coverage PR Comment
-      uses: marocchino/sticky-pull-request-comment@v2
-      if: github.event_name == 'pull_request'
-      with:
-        recreate: true
-        path: ./tst/my-cobertura-coverage.xml
+    - name: echo code coverage
+      run: cat code-coverage-results.md >> $GITHUB_STEP_SUMMARY
+    
+    
