--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -66,10 +66,10 @@ jobs:
     - name: echo code coverage
       run: cat code-coverage-results.md >> $GITHUB_STEP_SUMMARY
 
-    - name: PHP-CS-Fixer
-      uses: docker://ghcr.io/php-cs-fixer/php-cs-fixer:3-php8.0
-      with:
-       args: check .
+    #- name: PHP-CS-Fixer
+    #  uses: docker://ghcr.io/php-cs-fixer/php-cs-fixer:3-php8.0
+    #  with:
+    #   args: check .
       # use `check .` if your repository not having paths configured in .php-cs-fixer[.dist].php
     
     
